Corrected overflow to overflow-x.

--- a/css-styles/navigation.css
+++ b/css-styles/navigation.css
@@ -6,7 +6,7 @@ body, html {
     inline-size: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .header {
